添加数学公式支持

--- a/docs/_posts/00.测试.md
+++ b/docs/_posts/00.测试.md
@@ -16,7 +16,13 @@ author:
 测试博客发送功能。
 
 ### 测试数学功能
-假定用户$u \in \mathcal{U}$:
-$
-\sum_{k=1}{K} = nnnn
-$
+假定用户 $u \in \mathcal{U}$ :
+
+测试行内语法 $y=x×z$
+
+Euler's identity $y=zxy$ is a beautiful formula in $\mathbb{R}^2$.
+
+测试块语法：
+
+$$\frac {\partial^r} {\partial \omega^r} \left(\frac {y^{\omega}} {\omega}\right) 
+= \left(\frac {y^{\omega}} {\omega}\right) \left\{(\log y)^r + \sum_{i=1}^r \frac {(-1)^i r \cdots (r-i+1) (\log y)^{r-i}} {\omega^i} \right\}$$
